--- a/WebScrapper_Prototype/Views/Shop/Cart.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/Cart.cshtml
@@ -310,8 +310,8 @@
 								</div>
 
 								<div class="card-footer text-center">
-									<button onclick="" type="button" class="btn-outline-info fs-4 h4" style="padding:5px;">Checkout Cart</button>
-									<button onclick="" type="button" class="btn-outline-info fs-4 h4" style="padding:5px;">Continue Shopping</button>
+								<a href="/Checkout" class="btn-outline-info fs-4 h4" style="padding:5px;">Checkout Cart</a>
+									<a href="/" class="btn-outline-info fs-4 h4" style="padding:5px;">Continue Shopping</a>
 								</div>
 							</div>
 						</div>
