--- a/WebScrapper_Prototype/Views/Shop/Index.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/Index.cshtml
@@ -25,7 +25,7 @@
 	<meta property="og:title" content="WazaWare">
 	<meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
 	<meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
-	<meta property="og:url" content="https://WazaWare.co.za">
+	<meta property="og:url" content="https://wazaware.co.za">
 	<meta property="og:type" content="website">
 	<meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
 	<meta name="twitter:title" content="WazaWare">
